--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "lab1",
-    "slug": "lab1",
+    "name": "ASM",
+    "slug": "ASM",
     "platforms": [
       "ios",
       "android",
